--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uiuxcli",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "The command line of uiux",
   "dependencies": {
     "@babel/core": "7.15.0",
@@ -10,7 +10,9 @@
     "css-loader": "6.2.0",
     "html-webpack-plugin": "5.3.2",
     "less": "^4.1.1",
-    "less-loader": "^9.0.0",
+    "less-loader": "^10.0.1",
+    "sass": "^1.34.0",
+    "sass-loader": "^10.1.1",
     "serve": "12.0.0",
     "shelljs": "^0.8.5",
     "style-loader": "3.2.1",
