--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "serve": "12.0.0",
     "shelljs": "^0.8.5",
     "style-loader": "3.2.1",
+    "react-svg-loader": "^3.0.3",
+    "file-loader": "^6.2.0",
+    "url-loader": "^4.1.1",
     "uiuxloader": "^2.0.2",
     "uiuxtest": "^1.0.2",
     "webpack": "5.60.0",
