--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "uiuxcli",
-  "version": "1.0.14",
+  "version": "1.1.0",
   "description": "The command line of uiux",
   "dependencies": {
     "@babel/core": "7.15.0",
     "@babel/preset-react": "7.14.5",
+    "@svgr/webpack": "^8.1.0",
     "babel-loader": "8.2.2",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "6.2.0",
@@ -12,7 +13,6 @@
     "html-webpack-plugin": "5.3.2",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
-    "react-svg-loader": "^3.0.0",
     "sass": "^1.34.0",
     "sass-loader": "^10.1.1",
     "shelljs": "^0.8.5",
